syntax = "proto3";

package libvirt_service;

service LibvirtService {
  rpc CreateDomainService(CreateDomainRequest) returns (UniversalResponse) {}
  rpc ControllerDomainService(ControllerDomainRequest) returns (UniversalResponse) {}
  rpc InfoDomainService(InfoDomainRequest) returns (InfoDomainResponse) {}
}

message CreateDomainRequest {
  string xml = 1;
}

enum Instructions {
  Start = 0;
  Shutdown = 1;
  Reboot = 2;
}
message ControllerDomainRequest {
  string name = 1;
  Instructions instruction = 2;
}


message UniversalResponse {
  string message = 1;
}


message InfoDomainRequest {
  string name = 1;
}

message InfoDomainResponse {
  string state = 1;
  int64 max_memory = 2;
  int64 memory = 3;
  int32 virt_cpu = 4;
  int64 cpu_time = 5;
}
